--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>notification</module>
         <module>user-management</module>
         <module>invoice</module>
+        <module>file-storage</module>
     </modules>
 
     <dependencies>
