--- a/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
+++ b/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
@@ -5,7 +5,7 @@ databaseChangeLog:
       changes:
         - createTable:
             tableName: user
-            schemaName: user_schema
+            schemaName: user
             columns:
               - column:
                   name: id
