--- a/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
+++ b/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: mensura
       changes:
         - createTable:
-            tableName: user
+            tableName: users
             schemaName: user
             columns:
               - column:
