--- a/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
+++ b/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
@@ -13,6 +13,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: primary_user_id
                     nullable: false
 
               - column:
