primaryKeyName were added

--- a/invoice/src/main/resources/liquibase/1.0/20251001-create-item-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251001-create-item-table.yml
@@ -12,6 +12,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: primary_items_id
                     nullable: false
 
               - column:
