--- a/invoice/src/main/resources/liquibase/1.0/20251002-create-operation-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251002-create-operation-table.yml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: 20251002
-      author: gulnare.islamova
+      author: gulnare
       changes:
         - createTable:
             schemaName: invoice
