--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:16
     container_name: invoice-db
     environment:
-      POSTGRES_DB: cybernet-invoice
-      POSTGRES_USER: invoice
-      POSTGRES_PASSWORD: password#2025
+      POSTGRES_DB: ${DB_NAME_INVOICE}
+      POSTGRES_USER: ${DB_USERNAME_INVOICE}
+      POSTGRES_PASSWORD: ${DB_PASSWORD_INVOICE}
     ports:
       - "5433:5432"
     networks:
@@ -17,9 +17,9 @@ services:
     image: postgres:16
     container_name: user-db
     environment:
-      POSTGRES_DB: cybernet-user
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password123
+      POSTGRES_DB: ${DB_NAME_USER}
+      POSTGRES_USER: ${DB_USERNAME_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD_USER}
     ports:
       - "5434:5432"
     networks:
@@ -33,9 +33,9 @@ services:
     depends_on:
       - user-db
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://user-db:5432/cybernet-user
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password123
+      SPRING_DATASOURCE_URL: jdbc:postgresql://user-db:5432/${DB_NAME_USER}
+      SPRING_DATASOURCE_USERNAME: ${DB_USERNAME_USER}
+      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD_USER}
       SPRING_APPLICATION_NAME: user-management-service
       SERVER_PORT: 8080
     ports:
@@ -52,9 +52,9 @@ services:
       - invoice-db
       - user-management-service
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://invoice-db:5432/cybernet-invoice
-      SPRING_DATASOURCE_USERNAME: invoice
-      SPRING_DATASOURCE_PASSWORD: password#2025
+      SPRING_DATASOURCE_URL: jdbc:postgresql://invoice-db:5432/${DB_NAME_INVOICE}
+      SPRING_DATASOURCE_USERNAME: ${DB_USERNAME_INVOICE}
+      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD_INVOICE}
       USER_MANAGEMENT_URL: http://user-management-service:8080
       SPRING_APPLICATION_NAME: invoice-service
       SERVER_PORT: 8080
