primaryKeyName and schemaName were added

--- a/invoice/src/main/resources/liquibase/1.0/20251001-create-item-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251001-create-item-table.yml
@@ -4,6 +4,7 @@ databaseChangeLog:
       author: Farid V
       changes:
         - createTable:
+            schemaName: invoice
             tableName: items
             columns:
               - column:
