--- a/invoice/src/main/resources/liquibase/1.0/20251002-create-operation-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251002-create-operation-table.yml
@@ -13,6 +13,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: pk_operations
                     nullable: false
 
               - column:
@@ -35,7 +36,7 @@ databaseChangeLog:
 
               - column:
                   name: comment
-                  type: VARCHAR(255)
+                  type: TEXT
                   constraints:
                     nullable: false
 
