--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>3.2.5</version>
         </dependency>
 
+        <!-- liquibase -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
         <!-- MyBatis -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
