--- a/user-management/src/main/resources/liquibase/changelog-master.yml
+++ b/user-management/src/main/resources/liquibase/changelog-master.yml
@@ -1,3 +1,6 @@
 databaseChangeLog:
-  - includeAll:
-      path: liquibase/1.0
+  - include:
+      file: liquibase/1.0/20251001-create-schema.yml
+
+  - include:
+      file: liquibase/1.0/20251000-create-users-table.yml
