--- a/invoice/Dockerfile
+++ b/invoice/Dockerfile
@@ -1,9 +1,10 @@
-FROM openjdk:21-jdk-slim
-
+FROM maven:3.9-amazoncorretto-21-al2023 AS BUILDER
 WORKDIR /app
+COPY . .
+#COPY src ./src
+RUN mvn clean package -DskipTests -pl invoice -am
 
-COPY target/invoice-0.0.1.jar app.jar
-
-EXPOSE 8080
-
+FROM eclipse-temurin:21-jre-alpine
+WORKDIR /app
+COPY --from=BUILDER /app/invoice/target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
