--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- MyBatis Test -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
