--- a/user-management/application.yml
+++ b/user-management/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5434/DB_NAME
+    url: jdbc:postgresql://localhost:5434/${DB_NAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driverClassName: org.postgresql.Driver
