Add schemaName and primaryKeyName for 20251003-create-measurement-table

--- a/invoice/src/main/resources/liquibase/1.0/20251003-create-measurement-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251003-create-measurement-table.yml
@@ -5,6 +5,7 @@ databaseChangeLog:
       changes:
         - createTable:
             tableName: measurement
+            schemaName: measurement
             columns:
               - column:
                   name: id
@@ -12,6 +13,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: pk_measurement_id
                     nullable: false
               - column:
                   name: name
