--- a/invoice/src/main/resources/liquibase/1.0/20251003-create-measurements-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251003-create-measurements-table.yml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: mehdi asadov
       changes:
         - createTable:
-            tableName: measurement
+            tableName: measurements
             schemaName: measurement
             columns:
               - column:
