--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
             <version>3.0.4</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
