--- a/invoice/src/main/resources/liquibase/1.0/20251003-create-measurements-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251003-create-measurements-table.yml
@@ -20,6 +20,7 @@ databaseChangeLog:
                   type: VARCHAR(128)
                   constraints:
                     nullable: false
+                    unique: true
               - column:
                   name: created_at
                   type: TIMESTAMP
