delete foreign key from invoice liquibase, then add one of application.yml different port from 8080 the same time add default-schema and liquibase-schema

--- a/user-management/src/main/resources/application.yml
+++ b/user-management/src/main/resources/application.yml
@@ -7,3 +7,5 @@ spring:
   liquibase:
     change-log: classpath:liquibase/changelog-master.yml
     drop-first: true
+    default-schema: users
+    liquibase-schema: public
