--- a/invoice/src/main/resources/application.yml
+++ b/invoice/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8181
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5433/${DB_NAME}
@@ -7,3 +10,5 @@ spring:
   liquibase:
     change-log: classpath:liquibase/changelog-master.yml
     drop-first: true
+    default-schema: invoice
+    liquibase-schema: public
