change senderUserId and recipientUserId to senderTaxId and recipientTaxId

--- a/invoice/src/main/resources/liquibase/1.0/20251000-create-invoices-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251000-create-invoices-table.yml
@@ -17,13 +17,13 @@ databaseChangeLog:
                     primaryKeyName: invoice_id_primary_key
 
               - column:
-                  name: sender_user_id
+                  name: sender_tax_id
                   type: BIGINT
                   constraints:
                     nullable: false
 
               - column:
-                  name: recipient_user_id
+                  name: recipient_tax_id
                   type: BIGINT
                   constraints:
                     nullable: false
