--- a/invoice/src/main/resources/liquibase/1.0/20251000-create-invoices-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251000-create-invoices-table.yml
@@ -18,16 +18,15 @@ databaseChangeLog:
 
               - column:
                   name: sender_tax_id
-                  type: BIGINT
+                  type: VARCHAR(10)
                   constraints:
                     nullable: false
 
               - column:
                   name: recipient_tax_id
-                  type: BIGINT
+                  type: VARCHAR(10)
                   constraints:
                     nullable: false
-
 
               - column:
                   name: total_price
