soft delete, restore and findByTaxId was implemented for user

--- a/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
+++ b/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
@@ -46,4 +46,4 @@ databaseChangeLog:
                   name: updated_at
                   type: TIMESTAMP
                   constraints:
-                    nullable: false
+                    nullable: true
