--- a/user-management/src/main/resources/application.yml
+++ b/user-management/src/main/resources/application.yml
@@ -10,3 +10,12 @@ spring:
     default-schema: users
     liquibase-schema: public
 
+
+mybatis:
+#  type-aliases-package: az.cybernet.usermanagement.repository
+#  type-handlers-package: com.example.typehandler
+  mapper-locations: classpath:mapper/*xml
+  configuration:
+    map-underscore-to-camel-case: true
+    default-fetch-size: 100
+    default-statement-timeout: 30
