--- a/invoice/src/main/resources/liquibase/changelog-master.yml
+++ b/invoice/src/main/resources/liquibase/changelog-master.yml
@@ -13,3 +13,6 @@ databaseChangeLog:
 
   - include:
       file: liquibase/1.0/20251002-create-operations-table.yml
+
+  - include:
+      file: liquibase/1.0/20251005-insert-default-measurements.yaml
