--- a/invoice/src/main/resources/application.yml
+++ b/invoice/src/main/resources/application.yml
@@ -9,9 +9,12 @@ spring:
     driverClassName: org.postgresql.Driver
   liquibase:
     change-log: classpath:liquibase/changelog-master.yml
-    drop-first: true
+    drop-first: false
     default-schema: invoice
     liquibase-schema: public
+
+mybatis:
+  mapper-locations: classpath:mappers/**/*.xml
 
 user:
   service:
