--- a/invoice/src/main/resources/liquibase/1.0/20251002-create-operations-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251002-create-operations-table.yml
@@ -26,7 +26,7 @@ databaseChangeLog:
                   name: item_id
                   type: BIGINT
                   constraints:
-                    nullable: false
+                    nullable: true
 
               - column:
                   name: status
