handling validation exception errot=r and adding Junit test for addUser

--- a/user-management/src/main/resources/application.yml
+++ b/user-management/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
     change-log: classpath:liquibase/changelog-master.yml
     default-schema: users
     liquibase-schema: public
+    drop-first: true
 
 
 mybatis:
