--- a/invoice/src/main/resources/liquibase/1.0/20251006-create-operation-details-table.yml
+++ b/invoice/src/main/resources/liquibase/1.0/20251006-create-operation-details-table.yml
@@ -20,6 +20,13 @@ databaseChangeLog:
                   type: BIGINT
                   constraints:
                     nullable: false
+
+              - column:
+                  name: comment
+                  type: TEXT
+                  constraints:
+                    nullable: false
+
               - column:
                   name: item_status
                   type: VARCHAR(50)
