update checkstyle and some logic

--- a/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
+++ b/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
@@ -39,6 +39,7 @@ databaseChangeLog:
               - column:
                   name: created_at
                   type: TIMESTAMP
+                  defaultValue: now()
                   constraints:
                     nullable: false
 
