--- a/file-storage/pom.xml
+++ b/file-storage/pom.xml
@@ -13,6 +13,19 @@
     <artifactId>file-storage</artifactId>
     <version>0.0.1</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.8</version>
+        </dependency>
+        <dependency>
+            <groupId>az.cybernet</groupId>
+            <artifactId>invoice</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -25,6 +38,7 @@
             </plugin>
         </plugins>
     </build>
+
 
     
 </project>
