--- a/file-storage/pom.xml
+++ b/file-storage/pom.xml
@@ -13,6 +13,22 @@
     <artifactId>file-storage</artifactId>
     <version>0.0.1</version>
 
+    <properties>
+        <spring-cloud.version>2024.0.3</spring-cloud.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>com.github.librepdf</groupId>
@@ -25,7 +41,13 @@
             <version>0.0.1</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -39,6 +61,4 @@
         </plugins>
     </build>
 
-
-    
 </project>
