--- a/file-storage/pom.xml
+++ b/file-storage/pom.xml
@@ -12,48 +12,28 @@
 
     <artifactId>file-storage</artifactId>
     <version>0.0.1</version>
+
     <dependencies>
+        <!-- ONE OpenPDF version -->
         <dependency>
             <groupId>com.github.librepdf</groupId>
             <artifactId>openpdf</artifactId>
             <version>2.0.4</version>
         </dependency>
 
+        <!-- Test-only -->
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
             <version>2.0.30</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
 
-    <properties>
-        <spring-cloud.version>2024.0.3</spring-cloud.version>
-    </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.github.librepdf</groupId>
-            <artifactId>openpdf</artifactId>
-            <version>1.3.8</version>
-        </dependency>
+        <!-- Internal module (keep in sync with parent) -->
         <dependency>
             <groupId>az.cybernet</groupId>
             <artifactId>invoice</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
@@ -74,5 +54,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
