some bugs fix matches invoiceIds every place inside code

--- a/invoice/src/main/resources/application.yml
+++ b/invoice/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driverClassName: org.postgresql.Driver
   liquibase:
     change-log: classpath:liquibase/changelog-master.yml
-    drop-first: true
+    drop-first: false
     default-schema: invoice
     liquibase-schema: public
 
