--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,25 @@
                 <scope>import</scope>
             </dependency>
 
+
+            <dependency>
+                <groupId>io.confluent</groupId>
+                <artifactId>kafka-avro-serializer</artifactId>
+                <version>7.6.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.confluent</groupId>
+                <artifactId>kafka-schema-registry-client</artifactId>
+                <version>7.6.0</version>
+            </dependency>
+
+            <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.11.3</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
