--- a/user-management/src/main/resources/application.yml
+++ b/user-management/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     change-log: classpath:liquibase/changelog-master.yml
     default-schema: users
     liquibase-schema: public
-    drop-first: true
+    drop-first: false
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
