--- a/invoice/src/main/resources/application.yml
+++ b/invoice/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driverClassName: org.postgresql.Driver
   liquibase:
     change-log: classpath:liquibase/changelog-master.yml
-    drop-first: false
+    drop-first: true
     default-schema: invoice
     liquibase-schema: public
 
@@ -18,4 +18,4 @@ mybatis:
 
 user:
   service:
-    url: http://localhost:8080
+    url: http://localhost:8081
