fix approve and cancel registration methods

--- a/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
+++ b/user-management/src/main/resources/liquibase/1.0/20251000-create-users-table.yml
@@ -44,14 +44,14 @@ databaseChangeLog:
 
               - column:
                   name: date_of_birth
-                  type: VARCHAR(32)
+                  type: DATE
                   constraints:
                     nullable: false
 
               - column:
                   name: is_active
                   type: BOOLEAN
-                  defaultValueBoolean: true
+                  defaultValueBoolean: false
                   constraints:
                     nullable: false
 
