--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   invoice-db:
     image: postgres:16
@@ -37,6 +35,7 @@ services:
     container_name: user-management-service
     depends_on:
       - user-db
+      - redis
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://user-db:5432/${DB_NAME_USER}
       SPRING_DATASOURCE_USERNAME: ${DB_USERNAME_USER}
@@ -47,6 +46,12 @@ services:
       - "8081:8080"
     networks:
       - backend
+
+  redis:
+    image: redis:latest
+    container_name: redis-container
+    ports:
+      - "6379:6379"
 
   invoice-service:
     build:
@@ -75,3 +80,4 @@ networks:
 volumes:
   invoice-db-data:
   user-db-data:
+  redis-data:
